--- a/index.html
+++ b/index.html
@@ -1,9 +1,443 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>WebDev Training</title>
-</head>
-<body>
-<h1>Hi, this is the page I use for training my webdev skills</h1>
-</body>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/c3f3292747.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="/style.css">
+
+  </head>
+  <body>
+
+    <!-- JUMBOTRON -->
+    <div class="jumbotron jumbotron-fluid m-0">
+      <div class="container text-center">
+        <h1 class="display-4">Welcome to Thule</h1>
+        <p class="lead text-muted">We are all happy as penguins</p>
+      </div>
+    </div>
+
+
+    <!-- FIXED BACKGROUND -->
+<!--    <figure>
+      <div class="fixed-wrap">
+        <div id="fixed">
+
+        </div>
+      </div>
+    </figure>
+-->
+
+    <!-- NAVIGATION -->
+    <nav class="navbar sticky-top navbar-light navbar-expand-md">
+      <div class="container-fluid"> <!-- Putting this inside inteade of around solved for the little space-->
+
+        <a href="#"> <i class="fas af-logo fa-mountain"></i></i> </a>
+
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#mainNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse " id="mainNav">
+          <ul class="navbar-nav m-auto">
+            <li class="nav-item active"><a class="nav-link active" href="#">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Shop</a></li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Blog
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">News</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Recipes</a>
+              </div>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Contacts</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">My Account</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
+    <!-- MEET THE Products -->
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-12">
+          <hr class="my-4">
+          <h1 class="display-5">Aspidochelones</h1>
+          <hr class="my-4">
+        </div>
+      </div>
+    </div>
+    <!-- PANEL OF CARDS FOR SHOPPING -->
+    <div class="container text-white">
+      <div class="row">
+
+        <div class="col-md-6 py-1">
+          <div class="card sell-item">
+            <img src="Selection_019.png" class="card-img-top img-fluid">
+            <div class="container card-block py-3">
+              <h3 class="card-title">The cold North</h3>
+
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+              <!-- Item quantity adder -->
+              <div class="row justify-content-center ">
+                <div class="col-9">
+                  <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text " id="basic-addon2">Quantity</span>
+                    </div>
+
+                    <input class="form-control" type="number" step="1" max="99" min="1" value="0">
+
+                    <div class="input-group-append">
+                      <a class="btn bg-warning" href="#"> <i class="fas af-logo fa-shopping-cart"></i> </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 py-1">
+          <div class="card sell-item">
+            <img src="Selection_018.png" class="card-img-top img-fluid">
+            <div class="container card-block py-3">
+              <h3 class="card-title">The cold North</h3>
+
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+              <!-- Item quantity adder -->
+              <div class="row justify-content-center ">
+                <div class="col-9">
+                  <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text " id="basic-addon2">Quantity</span>
+                    </div>
+
+                    <input class="form-control" type="number" step="1" max="99" min="1" value="0">
+
+                    <div class="input-group-append">
+                      <a class="btn bg-warning" href="#"> <i class="fas af-logo fa-shopping-cart"></i> </a>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 py-1">
+          <div class="card sell-item">
+            <img src="Selection_018.png" class="card-img-top img-fluid">
+            <div class="container card-block py-3">
+              <h3 class="card-title">The cold North</h3>
+
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+              <!-- Item quantity adder -->
+              <div class="row justify-content-center ">
+                <div class="col-9">
+                  <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text " id="basic-addon2">Quantity</span>
+                    </div>
+
+                    <input class="form-control" type="number" step="1" max="99" min="1" value="0">
+
+                    <div class="input-group-append">
+                      <a class="btn bg-warning" href="#"> <i class="fas af-logo fa-shopping-cart"></i> </a>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 py-1">
+          <div class="card sell-item">
+            <img src="Selection_019.png" class="card-img-top img-fluid">
+            <div class="container card-block py-3">
+              <h3 class="card-title">The cold North</h3>
+
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+              <!-- Item quantity adder -->
+              <div class="row justify-content-center ">
+                <div class="col-9">
+                  <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text " id="basic-addon2">Quantity</span>
+                    </div>
+
+                    <input class="form-control" type="number" step="1" max="99" min="1" value="0">
+
+                    <div class="input-group-append">
+                      <a class="btn bg-warning" href="#"> <i class="fas af-logo fa-shopping-cart"></i> </a>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+      </div> <!-- END OF ROW -->
+    </div> <!-- END OF CONTAINER -->
+
+
+    <h2 class="display-4 text-center mt-5 pb-3 text-dark">Meet the Sea Lions</h2>
+
+    <!-- NAV WITH PILLS INFO -->
+    <div class="container">
+      <ul class="nav nav-pills justify-content-center flex-column flex-sm-row pill-mod">
+        <li class="nav-item pill-color"><a href="#urchin" data-toggle="tab" class="nav-link active">The Urchin</a></li>
+        <li class="nav-item pill-color"><a href="#poseidon" data-toggle="tab" class="nav-link">Poseidon</a></li>
+        <li class="nav-item pill-color"><a href="#snyl" data-toggle="tab" class="nav-link">Snylvik</a></li>
+        <li class="nav-item pill-color"><a href="#got" data-toggle="tab" class="nav-link">Got the One Eyed</a></li>
+      </ul>
+
+      <div class="tab-content mt-3">
+        <div class="tab-pane fade show active" id="urchin">
+          <div class="container">
+            <div class="card mb-3">
+              <div class="row no-gutters">
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">The Urchin</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <img src="15.jpeg" class="card-img">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="tab-pane fade" id="poseidon">
+          <div class="container">
+            <div class="card mb-3">
+              <div class="row no-gutters">
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Poseidon</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <img src="15.jpeg" class="card-img">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="tab-pane fade" id="snyl">
+          <div class="container">
+            <div class="card mb-3">
+              <div class="row no-gutters">
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Snylvik</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <img src="15.jpeg" class="card-img">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="tab-pane fade" id="got">
+
+          <div class="container">
+            <div class="card mb-3">
+              <div class="row no-gutters">
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Got the One Eyed</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <img src="15.jpeg" class="card-img">
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <!-- IMAGE CAROUSEL -->
+
+    <div id="slides" class="carousel slide" data-ride="carousel">
+      <!-- Carousel indicators (bring to diff slide) -->
+      <ul class="carousel-indicators">
+        <li data-target="#slides" data-slide-to="0" class="active"></li>
+        <li data-target="#slides" data-slide-to="1"></li>
+        <li data-target="#slides" data-slide-to="2"></li>
+      </ul>
+      <div class="carousel-inner">
+        <div class="carousel-item active ">
+          <img src="nor4.jpg">
+          <div class="carousel-caption cap1">
+            <h1 class="quote">Drasba'Nûr</h1>
+            <p>Don't get lost, or you might never come back...</p>
+            <a href="#" class="col-sm-4 col-md-3 m-auto">DRYKS</a>
+            <a href="#" class="col-sm-4 col-md-3 m-auto">URWONY</a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="no2.jpg">
+          <div class="carousel-caption cap2">
+            <h1 class="quote">Drasba'Nûr</h1>
+            <p>Don't get lost, or you might never come back...</p>
+            <a href="#" class="col-sm-4 col-md-3 m-auto">DRYKS</a>
+            <a href="#" class="col-sm-4 col-md-3 m-auto">URWONY</a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="nor5.jpg">
+          <div class="carousel-caption cap3">
+            <h1 class="quote">Drasba'Nûr</h1>
+            <p>Don't get lost, or you might never come back...</p>
+            <a href="#" class="col-sm-4 col-md-3 m-auto">DRYKS</a>
+            <a href="#" class="col-sm-4 col-md-3 m-auto">URWONY</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- THREE LOGOS THAT RESPOND NICELY -->
+    <div class="container-fluid mt-4">
+      <div class="row text-center">
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <i id="html-logo" class="fab fa-html5"></i>
+          <h3>HTML 5</h3>
+          <p>This crazy website was built with HTML 5</p>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <i id="bootstrap-logo" class="fas fa-bold"></i>
+          <h3>BOOTSTRAP 4</h3>
+          <p>Bootstrap 4 was also a major player in the build</p>
+        </div>
+
+        <div class="col-sm-6 col-md-4 m-auto">
+          <i id="css-logo" class="fab fa-css3-alt"></i>
+          <h3>CSS3</h3>
+          <p>And what would it be without CSS3?</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container"><hr class="my-4"></div>
+
+    <!-- TWO COLUMNS -->
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h2 class="text-center">The views on Nilfgard</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        </div>
+        <div class="col-lg embed-responsive embed-responsive-16by9">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Eip_DSt8ICA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+
+    <div class="container"><hr class="my-4"></div>
+
+    <!-- SOCIAL MEDIA -->
+    <div class="container-fluid">
+      <div class="row text-center">
+        <div class="connect col-12">
+          <h2>Connect</h2>
+        </div>
+
+        <div class="social col-12">
+          <a href="#"> <i class="fab fa-facebook"></i> </a>
+          <a href="#"> <i class="fab fa-google-plus-g"></i> </a>
+          <a href="#"> <i class="fab fa-twitter"></i> </a>
+          <a href="#"> <i class="fab fa-youtube"></i> </a>
+          <a href="#"> <i class="fab fa-instagram"></i> </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- FOOTER -->
+    <footer>
+      <div class="container-fluid py-4">
+        <div class="row text-center">
+          <div class="col-md-4">
+            <a class="px-3" href="#"> <i class="fas af-logo fa-code"></i></i> </a>
+            <hr class="light">
+            <p>+31 452 45 87</p>
+            <p>thule@ultima.ex</p>
+            <p>777 Belzeb St.</p>
+            <p>Bilgabo, Yggdrasil</p>
+          </div>
+
+          <div class="col-md-4">
+            <hr class="light">
+            <h5>Timetable</h5>
+            <hr class="light">
+            <p>Wednesday: 4pm-4:20pm</p>
+            <p>Doomsday: All Day</p>
+            <p>Sunday: Not Open</p>
+          </div>
+
+          <div class="col-md-4">
+            <a class="px-3" href="#"> <i class="fas af-logo fa-code"></i></i> </a>
+            <hr class="light">
+            <p>+31 452 45 87</p>
+            <p>thule@ultima.ex</p>
+            <p>777 Belzeb St.</p>
+            <p>Bilgabo, Yggdrasil</p>
+          </div>
+        </div>
+
+        <div class="col-12">
+          <hr class="light">
+          <h5 class="text-center">&copy; ExUltimaThule</h5>
+        </div>
+      </div>
+    </footer>
+
+
+
+
+
+    <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+
+  </body>
 </html>
