--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                   </div>
                 </div>
                 <div class="col-md-4">
-                  <img src="IMG-20200329-WA0026.jp"  class="card-img">
+                  <img src="IMG-20200329-WA0026.jpg"  class="card-img">
                 </div>
               </div>
             </div>
